@@ -32,7 +32,7 @@
 #include <stdlib.h>
 
 /************************************************************************/
-/* LifeTime Policies													*/
+/* LifeTime Policies */
 /************************************************************************/
 struct NoDestroy
 {
@@ -85,7 +85,7 @@ private:
 };
 
 /************************************************************************/
-/* Singleton Member Functions   										*/
+/* Singleton Member Functions */
 /************************************************************************/
 
 template <typename T, typename Policy>
